src/objdetect/objdetect.h

void     CascadeClassifier_Close(CascadeClassifierPtr self);
void     HOGDescriptor_Close(HOGDescriptorPtr self);
// QRCodeDetector
CvStatus QRCodeDetector_New(QRCodeDetector *rval);
void     QRCodeDetector_Close(QRCodeDetectorPtr self);
CvStatus QRCodeDetector_DetectAndDecode(QRCodeDetector self, Mat input, VecPoint *points,
                                        Mat *straight_qrcode, char **rval);
CvStatus QRCodeDetector_Detect(QRCodeDetector self, Mat input, VecPoint *points, bool *rval);
CvStatus QRCodeDetector_Decode(QRCodeDetector self, Mat input, VecPoint *points, Mat straight_qrcode,
                               char **rval);
CvStatus QRCodeDetector_decodeCurved(QRCodeDetector self, Mat img, VecPoint points,
                                     CVD_OUT Mat *straight_qrcode, char **rval);
CvStatus QRCodeDetector_detectAndDecodeCurved(QRCodeDetector self, Mat img, VecPoint *points,
                                              CVD_OUT Mat *straight_qrcode, char **rval);
CvStatus QRCodeDetector_DetectMulti(QRCodeDetector self, Mat input, VecPoint *points, bool *rval);
CvStatus QRCodeDetector_DetectAndDecodeMulti(QRCodeDetector self, Mat input, VecVecChar *decoded,
                                             VecPoint *points, VecMat *straight_code, bool *rval);
CvStatus QRCodeDetector_setEpsX(QRCodeDetector self, double epsX);
CvStatus QRCodeDetector_setEpsY(QRCodeDetector self, double epsY);
CvStatus QRCodeDetector_setUseAlignmentMarkers(QRCodeDetector self, bool useAlignmentMarkers);
void     FaceDetectorYN_Close(FaceDetectorYNPtr self);
void     FaceRecognizerSF_Close(FaceRecognizerSFPtr self);