lib/src/g/objdetect.g.dart


@ffi.Native<ffi.Void Function(QRCodeDetectorPtr)>()
external void QRCodeDetector_Close(
  QRCodeDetectorPtr self,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(QRCodeDetector, Mat, ffi.Pointer<VecPoint>,
        Mat, ffi.Pointer<ffi.Pointer<ffi.Char>>)>()
external ffi.Pointer<CvStatus> QRCodeDetector_Decode(
  QRCodeDetector self,
  Mat input,
  ffi.Pointer<VecPoint> points,
  Mat straight_qrcode,
  ffi.Pointer<ffi.Pointer<ffi.Char>> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(QRCodeDetector, Mat, imp1.CvCallback_3)>()
external ffi.Pointer<CvStatus> QRCodeDetector_Decode_Async(
  QRCodeDetector self,
  Mat input,
  imp1.CvCallback_3 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        QRCodeDetector, Mat, ffi.Pointer<VecPoint>, ffi.Pointer<ffi.Bool>)>()
external ffi.Pointer<CvStatus> QRCodeDetector_Detect(
  QRCodeDetector self,
  Mat input,
  ffi.Pointer<VecPoint> points,
  ffi.Pointer<ffi.Bool> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(QRCodeDetector, Mat, ffi.Pointer<VecPoint>,
        ffi.Pointer<Mat>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>()
external ffi.Pointer<CvStatus> QRCodeDetector_DetectAndDecode(
  QRCodeDetector self,
  Mat input,
  ffi.Pointer<VecPoint> points,
  ffi.Pointer<Mat> straight_qrcode,
  ffi.Pointer<ffi.Pointer<ffi.Char>> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(QRCodeDetector, Mat, ffi.Pointer<VecVecChar>,
        ffi.Pointer<VecPoint>, ffi.Pointer<VecMat>, ffi.Pointer<ffi.Bool>)>()
external ffi.Pointer<CvStatus> QRCodeDetector_DetectAndDecodeMulti(
  QRCodeDetector self,
  Mat input,
  ffi.Pointer<VecVecChar> decoded,
  ffi.Pointer<VecPoint> points,
  ffi.Pointer<VecMat> straight_code,
  ffi.Pointer<ffi.Bool> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(QRCodeDetector, Mat, imp1.CvCallback_4)>()
external ffi.Pointer<CvStatus> QRCodeDetector_DetectAndDecodeMulti_Async(
  QRCodeDetector self,
  Mat input,
  imp1.CvCallback_4 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(QRCodeDetector, Mat, imp1.CvCallback_3)>()
external ffi.Pointer<CvStatus> QRCodeDetector_DetectAndDecode_Async(
  QRCodeDetector self,
  Mat input,
  imp1.CvCallback_3 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        QRCodeDetector, Mat, ffi.Pointer<VecPoint>, ffi.Pointer<ffi.Bool>)>()
external ffi.Pointer<CvStatus> QRCodeDetector_DetectMulti(
  QRCodeDetector self,
  Mat input,
  ffi.Pointer<VecPoint> points,
  ffi.Pointer<ffi.Bool> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(QRCodeDetector, Mat, imp1.CvCallback_2)>()
external ffi.Pointer<CvStatus> QRCodeDetector_DetectMulti_Async(
  QRCodeDetector self,
  Mat input,
  imp1.CvCallback_2 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(QRCodeDetector, Mat, imp1.CvCallback_2)>()
external ffi.Pointer<CvStatus> QRCodeDetector_Detect_Async(
  QRCodeDetector self,
  Mat input,
  imp1.CvCallback_2 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Pointer<QRCodeDetector>)>()
external ffi.Pointer<CvStatus> QRCodeDetector_New(
  ffi.Pointer<QRCodeDetector> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> QRCodeDetector_New_Async(
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(QRCodeDetector, Mat, VecPoint,
        ffi.Pointer<Mat>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>()
external ffi.Pointer<CvStatus> QRCodeDetector_decodeCurved(
  QRCodeDetector self,
  Mat img,
  VecPoint points,
  ffi.Pointer<Mat> straight_qrcode,
  ffi.Pointer<ffi.Pointer<ffi.Char>> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        QRCodeDetector, Mat, VecPoint, imp1.CvCallback_2)>()
external ffi.Pointer<CvStatus> QRCodeDetector_decodeCurved_Async(
  QRCodeDetector self,
  Mat img,
  VecPoint points,
  imp1.CvCallback_2 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(QRCodeDetector, Mat, ffi.Pointer<VecPoint>,
        ffi.Pointer<Mat>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>()
external ffi.Pointer<CvStatus> QRCodeDetector_detectAndDecodeCurved(
  QRCodeDetector self,
  Mat img,
  ffi.Pointer<VecPoint> points,
  ffi.Pointer<Mat> straight_qrcode,
  ffi.Pointer<ffi.Pointer<ffi.Char>> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(QRCodeDetector, Mat, imp1.CvCallback_3)>()
external ffi.Pointer<CvStatus> QRCodeDetector_detectAndDecodeCurved_Async(
  QRCodeDetector self,
  Mat img,
  imp1.CvCallback_3 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(QRCodeDetector, ffi.Double)>()
external ffi.Pointer<CvStatus> QRCodeDetector_setEpsX(
  QRCodeDetector self,
  double epsX,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        QRCodeDetector, ffi.Double, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> QRCodeDetector_setEpsX_Async(
  QRCodeDetector self,
  double epsX,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(QRCodeDetector, ffi.Double)>()
external ffi.Pointer<CvStatus> QRCodeDetector_setEpsY(
  QRCodeDetector self,
  double epsY,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        QRCodeDetector, ffi.Double, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> QRCodeDetector_setEpsY_Async(
  QRCodeDetector self,
  double epsY,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(QRCodeDetector, ffi.Bool)>()
external ffi.Pointer<CvStatus> QRCodeDetector_setUseAlignmentMarkers(
  QRCodeDetector self,
  bool useAlignmentMarkers,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        QRCodeDetector, ffi.Bool, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> QRCodeDetector_setUseAlignmentMarkers_Async(
  QRCodeDetector self,
  bool useAlignmentMarkers,
  imp1.CvCallback_0 callback,
);

const addresses = _SymbolAddresses();

class _SymbolAddresses {
  const _SymbolAddresses();
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(CascadeClassifierPtr)>>
      get CascadeClassifier_Close =>
          ffi.Native.addressOf(self.CascadeClassifier_Close);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(FaceDetectorYNPtr)>>
      get FaceDetectorYN_Close =>
          ffi.Native.addressOf(self.FaceDetectorYN_Close);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(FaceRecognizerSFPtr)>>
      get FaceRecognizerSF_Close =>
          ffi.Native.addressOf(self.FaceRecognizerSF_Close);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(HOGDescriptorPtr)>>
      get HOGDescriptor_Close => ffi.Native.addressOf(self.HOGDescriptor_Close);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(QRCodeDetectorPtr)>>
      get QRCodeDetector_Close =>
          ffi.Native.addressOf(self.QRCodeDetector_Close);
}

final class CascadeClassifier extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef CascadeClassifierPtr = ffi.Pointer<CascadeClassifier>;
typedef CvStatus = imp1.CvStatus;

final class FaceDetectorYN extends ffi.Struct {
  external ffi.Pointer<ffi.Pointer<ffi.Void>> ptr;
}

typedef FaceDetectorYNPtr = ffi.Pointer<FaceDetectorYN>;

final class FaceRecognizerSF extends ffi.Struct {
  external ffi.Pointer<ffi.Pointer<ffi.Void>> ptr;
}

typedef FaceRecognizerSFPtr = ffi.Pointer<FaceRecognizerSF>;

final class HOGDescriptor extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef HOGDescriptorPtr = ffi.Pointer<HOGDescriptor>;
typedef Mat = imp1.Mat;

final class QRCodeDetector extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef QRCodeDetectorPtr = ffi.Pointer<QRCodeDetector>;
typedef Size = imp1.Size;
typedef VecF32 = imp1.VecF32;
typedef VecF64 = imp1.VecF64;
typedef VecI32 = imp1.VecI32;
typedef VecMat = imp1.VecMat;
typedef VecPoint = imp1.VecPoint;
typedef VecRect = imp1.VecRect;
typedef VecUChar = imp1.VecUChar;
typedef VecVecChar = imp1.VecVecChar;
